--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,6 +1,6 @@
 <!--
-Client Management (CM) 
-Copyright (C) 2021  D P Bennett & Associates Limited
+LabelPrint (LP) 
+Copyright (C) 2022  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
@@ -32,7 +32,7 @@ Email: info@dpbennett.com.jm
         <meta http-equiv="expires" content="0" />
         <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
         <meta http-equiv="pragma" content="no-cache" />
-        <title>#{clientManager.applicationHeader}</title>     
+        <title>LabelPrint</title>     
         <link rel="shortcut icon" type="image/x-icon" href="#{systemManager.appShortcutIconURL}" />
         <script type="text/javascript" src="js/javascripts.js" />   
         <link rel="stylesheet" href="css/main.css" />  
@@ -61,7 +61,7 @@ Email: info@dpbennett.com.jm
                             
                             <h:panelGrid columns="1">   
 
-                                <h:outputText value="#{clientManager.applicationHeader}"
+                                <h:outputText value="LabelPrint"
                                               style="color: darkgrey; font-size: 14pt; font-weight: bold;" />
 
                                 <h:outputText value="#{systemManager.applicationSubheader}"
@@ -95,47 +95,24 @@ Email: info@dpbennett.com.jm
                     <p:splitter>
                         <p:splitterPanel styleClass="p-d-flex p-ai-center p-jc-center" 
                                          size="30" minSize="0">
-                            <p:panel header="Dashboard">
+                             <p:panel id="dashboardPanel" header="Dashboard">
+
                                 <p:commandButton
                                     id="doGeneralSearchButton"
                                     style="visibility: hidden;"
                                     global="false"                                        
                                     value=""  
-                                    update=":appForm:growl3"
+                                    update=""
                                     title="This is the default button that accepts the enter key press" 
-                                    onstart="PF('longProcessDialogVar').show();"                                 
-                                    oncomplete="PF('longProcessDialogVar').hide();"
-                                    actionListener="#{systemManager.doDefaultSearch}"
+                                    actionListener="#{jobManager.doDefaultSearch}"
                                     process="@form"/>                    
 
-                                <p:defaultCommand id="dashboardDefaultCommandButton" 
-                                                  target="doGeneralSearchButton" />
+                                <p:defaultCommand id="dashboardDefaultCommandButton"
+                                                  scope="dashboardPanel"
+                                                  target=":appForm:doGeneralSearchButton" />
 
-                                <p:accordionPanel id="dashboardAccordion" 
-                                                  value="#{systemManager.dashboard.tabs}" 
-                                                  var="t" 
-                                                  widgetVar="dashboardAccordionVar"
-                                                  rendered="#{systemManager.dashboard.render}"
-                                                  multiple="false">
+                                <ui:include src="dashboard/client/clientsTab.xhtml" />
 
-                                    <p:ajax event="tabChange"       
-                                            immediate="true"
-                                            process="@this"
-                                            listener="#{systemManager.onDashboardTabChange}" />
-
-                                    <p:tab title="#{t.name}" > 
-
-                                        <h:panelGroup rendered="#{t.id == 'System Administration'}">
-                                            <ui:include src="dashboard/admin/generalAdminTab.xhtml" />
-                                        </h:panelGroup>
-
-                                        <h:panelGroup rendered="#{t.id == 'Clients'}">
-                                            <ui:include src="dashboard/client/clientsTab.xhtml" />
-                                        </h:panelGroup>
-
-                                    </p:tab>   
-
-                                </p:accordionPanel>
                             </p:panel>
                         </p:splitterPanel>     
                         <p:splitterPanel styleClass="p-d-flex p-ai-center p-jc-center" 
