--- a/src/main/webapp/dashboard/job/search.xhtml
+++ b/src/main/webapp/dashboard/job/search.xhtml
@@ -1,5 +1,5 @@
 <!--
-Job Management & Tracking System (JMTS) 
+LabelPrint (LP) 
 Copyright (C) 2023  D P Bennett & Associates Limited
 
 This program is free software: you can redistribute it and/or modify
