--- a/src/main/webapp/label/labelsTab.xhtml
+++ b/src/main/webapp/label/labelsTab.xhtml
@@ -43,7 +43,7 @@ Email: info@dpbennett.com.jm
             <p:inputText id="energyLabelSearchText" 
                          placeholder="Enter search text"
                          style="width:200px" 
-                         value="#{energyLabelManager.searchText}" >
+                         value="#{energyLabelManager.energyLabelSearchText}" >
 
                 <p:ajax event="keyup"                            
                         global="false"
